[gd_scene load_steps=2 format=3 uid="uid://bfndp6mbvajge"]

[ext_resource type="Script" path="res://Characters/spawn_monsters.gd" id="1_ajdfy"]

[node name="spawn_monsters" type="Node2D"]
z_index = 3
script = ExtResource("1_ajdfy")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="spawn_area" type="ReferenceRect" parent="."]
offset_right = 128.0
offset_bottom = 128.0

[node name="spawn_monster" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
